# RemoteRenderer

./: CMakeLists.txt  INSTALL  README  RemoteRenderer.sln
Client/: Client.vcxproj
Codec/: CMakeLists.txt  Codec.vcxproj  CodecPrereqs.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  Init.cpp  rgbData.h
CodecExample/: CodecExample.vcxproj  decoding_encoding.cpp
DesktopClient/: CMakeLists.txt  ClientApp.cpp  ClientApp.h  GameApp.cpp  GameApp.h  LibraryApp.cpp  LibraryApp.h  main.cpp
GL_Demo/: Server.h  main.cpp
LibraryConfig/: CMakeLists.txt  Config.cpp  Config.h  Game.cpp  Game.h  LibraryConfigPrereqs.h
Networking/: NetworkManager.h  Networking.vcxproj
ObjectBrowser/: CMakeLists.txt  GameState.cpp  GameState.h  ObjectBrowser.cpp  ObjectBrowser.h  ObjectBrowser.vcxproj  main.cpp
ProofOfConcept/Client/: main.cpp
ProofOfConcept/Codec/: Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  Init.cpp  Init.h  rgbData.cpp  rgbData.h
ProofOfConcept/Game/: Server.cpp
ProofOfConcept/Networking/: NetworkManager.cpp  NetworkManager.h
ProofOfConcept/RemoteOIS/includes/: DefaultRemoteDeviceProtocol.h  DefaultRemoteFactoryCreatorProtocol.h  RemoteConnectionManager.h  RemoteInputManager.h  RemoteKeyboard.h  RemoteMouse.h  RemoteOIS.h  RemoteOISConnectionManager.h  RemoteOISInputManager.h  RemoteOISMessageListener.h  RemoteOISPrereqs.h  RemoteOISWebSocketppConnection.h  WebSocketppConnection.h
ProofOfConcept/RemoteOIS/src/: RemoteConnectionManager.cpp  RemoteInputManager.cpp  RemoteKeyboard.cpp  RemoteMouse.cpp  RemoteOISConnectionManager.cpp  RemoteOISInputManager.cpp  RemoteOISWebSocketppConnection.cpp  WebSocketppConnection.cpp
ProofOfConcept/RemoteOIS/src/remote/: RemoteConnectionManager.cpp  RemoteInputManager.cpp
ProofOfConcept/Server/: Packet.cpp  Packet.h  PacketQueue.cpp  Server.cpp  Server.h  ServerApp.cpp  ServerApp.h  constants.h  main.cpp
ProofOfConcept/Stream/: FileStream.cpp  FileStream.h  GLWindowStream.cpp  GLWindowStream.h  IStream.h  NetworkStream.cpp  NetworkStream.h
ProofOfConcept/WebClient/: index.html
ProofOfConcept/WebClient/js/: jsmpeg.js  jsmpg.js  main.js  mouse.js  ois.js
ProofOfConcept/WebClient/styles/: style.css
RemoteOIS/: CMakeLists.txt  RemoteOIS.vcxproj
RemoteOIS/doc/: Doxyfile  mainpage.dox
RemoteOIS/includes/: RemoteOIS.h  RemoteOISConnectionManager.h  RemoteOISDefaultDeviceProtocol.h  RemoteOISDefaultFactoryCreatorProtocol.h  RemoteOISInputManager.h  RemoteOISKeyboard.h  RemoteOISMouse.h  RemoteOISPrereqs.h  RemoteOISWebSocketppConnection.h
RemoteOIS/includes/remote/: DefaultRemoteDeviceProtocol.h  RemoteOIS.h  RemoteWindow.h
RemoteOIS/src/: RemoteOISConnectionManager.cpp  RemoteOISDefaultDeviceProtocol.cpp  RemoteOISInputManager.cpp  RemoteOISKeyboard.cpp  RemoteOISMouse.cpp  RemoteOISWebSocketppConnection.cpp
RemoteOIS/src/remote/: MessageListener.h
RemoteOgreFramework/: AppState.h  AppStateManager.cpp  AppStateManager.h  RemoteOgreFramework.cpp  RemoteOgreFramework.h
Server/: CMakeLists.txt  ConcurrentQueue.h  Config.cpp  Config.h  Server.vcxproj  ServerApp.cpp  ServerApp.h  main.cpp
SnS_Demo/: CMakeLists.txt  SnS_Demo.vcxproj
SnS_Demo/header/: AdvancedOgreFramework.h  AppState.h  Ball.h  Blob.h  Boss.h  Box.h  BoxChunk.h  Character.h  CharacterCreateState.h  CharacterSelectState.h  Enemy.h  FloatingNumber.h  FloatingText.h  GameObject.h  GameState.h  Item.h  ItemDatabase.h  MenuState.h  MotionState.h  OptionsMenu.h  Plane.h  Player.h  Projectile.h  RemoteOgreFramework.h  Robot.h  SoundManager.h  SoundMenu.h  SpacesAndShapes.h  StringHelper.h  World.h  stdafx.h
SnS_Demo/src/: AdvancedOgreFramework.cpp  AppStateManager.cpp  Ball.cpp  Blob.cpp  Boss.cpp  Box.cpp  BoxChunk.cpp  Character.cpp  CharacterCreateState.cpp  CharacterSelectState.cpp  Enemy.cpp  FloatingNumber.cpp  FloatingText.cpp  GameObject.cpp  GameState.cpp  Item.cpp  ItemDatabase.cpp  MenuState.cpp  OptionsMenu.cpp  Plane.cpp  Player.cpp  Projectile.cpp  RemoteOgreFramework.cpp  Robot.cpp  SoundManager.cpp  SoundMenu.cpp  SpacesAndShapes.cpp  StringHelper.cpp  World.cpp
SnS_Demo/xml/: database.xml  enemies.xml  items.xml  map.xml
Stream/: ExportDefine.h  GLWindowStream.cpp  IStream.h  NetworkStream.h  Stream.vcxproj  StreamPrereqs.h
Utility/: itoa.h
WebClient/: WebClient.jsproj  index.html
WebClient/js/: game.js  jsmpeg.js  main.js  ois.js
WebClient/styles/: bar.css  footer.css  library.css  style.css
cmake/modules/: FindBullet.cmake  FindCodec.cmake  FindFFmpeg.cmake  FindFreeglut.cmake  FindJsonCpp.cmake  FindOIS.cmake  FindPkgMacros.cmake  FindRemoteOIS.cmake  FindSDL.cmake  FindSDL_mixer.cmake  FindSDL_net.cmake  LinkLibraries.cmake
cmake/utils/: LinkLibraries.cmake
includes/remote/: DefaultRemoteDeviceProtocol.h  DefaultRemoteFactoryCreatorProtocol.h  RemoteConnectionManager.h  RemoteKeyboard.h  RemotePrereqs.h
src/remote/: RemoteInputManager.cpp  RemoteMouse.cpp  WebSocketppConnection.cpp
